Wed Jan 30 04:17:07 GMT 2013  Olly Betts <olly@survex.com>

	* common/Makefile.mk,common/Tokeniseise.pm,languages/Makefile.mk,
	  languages/collate-sbl: Factor out the generic code to create a
	  string-to-enum mapping table into a perl module so we can reuse
	  it elsewhere.

Mon Jan 28 01:44:53 GMT 2013  Olly Betts <olly@survex.com>

	* examples/quest.cc: Fix to build with Sun Studio 12 compiler.
	  (ticket#611)

Thu Jan 24 22:40:12 GMT 2013  Olly Betts <olly@survex.com>

	* common/Makefile.mk,common/keyword.cc,common/keyword.h: Commit new
	  keyword lookup function needed by previous commit.

Thu Jan 24 22:26:19 GMT 2013  Olly Betts <olly@survex.com>

	* languages/: Generate a compact and efficient table to convert
	  language names to enum codes, which we can then use a C switch
	  statement to dispatch.  The table first checks the token length,
	  and then does a binary chop on tokens of the same length.  This
	  is both faster and smaller than the approach we were using, with
	  the benefit that the table is auto-generated.

Wed Jan 23 00:51:42 GMT 2013  Olly Betts <olly@survex.com>

	* matcher/selectpostlist.cc,matcher/selectpostlist.h: Check document
	  matches weight threshold before checking positional information,
	  which speeds up slow phrase searches (tweaked version of
	  positional-query-weight-check-first.patch from #394).

Thu Jan 17 06:48:41 GMT 2013  Olly Betts <olly@survex.com>

	* tests/api_stem.cc: Extend stem2 to ensure description of the stemmer
	  isn't the same as the description of Stem("none").  Fix description
	  of testcase stemlangs2.

Thu Jan 17 02:32:31 GMT 2013  Olly Betts <olly@survex.com>

	* HACKING: Update link to new home of autotools tutorial.

Wed Jan 16 02:40:20 GMT 2013  Olly Betts <olly@survex.com>

	* HACKING,Makefile.am: Rename CHK_SOURCES to check_sources - variables
	  ending _SOURCES usually have a special meaning in automake, so it's
	  confusing to have one which doesn't.
